Major refactoring: architecture, thread safety, model improvements, tests
P0 Bug Fixes:
- Combat.containsMobile() type mismatch (String vs long)
- CombatCalculator.isPlayerUsingMagicalWeapon() copy-paste bug
- GameCharacter dual stat storage inconsistency (setStat vs baseStats)

P1 Thread Safety:
- ConcurrentLinkedQueue for Combatant.commandQueue
- synchronizedSet for Combatant.statusFlags
- volatile for Combat.state, synchronizedList for roundResults/combatLog
- ConcurrentHashMap + compute() for CombatManager.initiateCombat()
- ConcurrentHashMap for SpellRegistry
- Double-checked locking for LootGenerator cache

P2 Architecture:
- DaoProvider singleton (167 inline new XxxDAO() calls replaced across 38 files)
- TransactionManager (154 DriverManager.getConnection() calls replaced, runInTransaction API)
- CharacterDAO split: 2849->1240 lines + RoomDAO, SkillDAO, SpellDAO, EquipmentDAO, SettingsDAO
- CombatManager split: 1675->934 + DeathHandler, CombatRewardService, CombatMessagingService
- CombatCommandHandler split: 3194->373 + RogueSkillHandler, MeleeSkillHandler, SpellCastHandler
- ItemCommandHandler split: 2263->1305 + ShopCommandHandler, EquipmentCommandHandler
- GmCommandHandler split: 1638->103 + GmCharacterHandler, GmWorldHandler, GmInfoHandler
- ClientHandler extraction: CharacterCreationHandler (login/char creation flow)
- Service layer: MobileMatchingService, ExperienceService, ItemMatchingService
- MobileRegistry: in-memory mob tracking replaces per-tick DB polling (13 call sites)

P3 Model Improvements:
- StatBlock immutable record (10 stats, Builder, ZERO constant)
- Direction enum with fromString(), opposite(); Room exits as EnumMap
- SkillProgression promoted to top-level enum
- Builder pattern on ItemTemplate, ItemInstance, CharacterRecord, MobileTemplate, Mobile
- Spell effects as List<String> (replaces spellEffectId1..4)
- Business logic moved from models to CombatCalculator
- ThreadLocalRandom replaces 54 Math.random() calls across 22 files

P4 Ho